--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,10 @@ body {
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+.logo {
+  width: 50px;
+  height: 20px;
+}
 
 hr {
   margin: 1rem 0;
@@ -3040,7 +3044,7 @@ textarea.form-control-lg {
   max-height: 50px;
 }
 .btn-primary {
-  color: #fff;
+  color: black;
   background-color: #ffc800;
   border-color: #ffc800;
 }
@@ -11438,14 +11442,16 @@ header.masthead {
 }
 
 header.masthead .img-circular {
+  width: 200px;
+  height: 100px;
   max-width: 300px;
-  max-height: 45vh;
+  max-height: 150px;
   background-image: url(https://drive.google.com/thumbnail?id=1U5hDPKPpo66XJYxpV1K0ofjz1I63AOt_);
   background-size: cover;
   display: block;
-  border-radius: 50px;
-  -webkit-border-radius: 50px;
-  -moz-border-radius: 50px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
   text-align: center;
   margin: auto;
   margin-bottom: 10px;
@@ -11460,7 +11466,7 @@ header.masthead .masthead-subheading {
   font-family: "Monaco", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 header.masthead .masthead-heading {
-  font-size: 3.25rem;
+  font-size: 1.95rem;
   font-weight: 700;
   line-height: 3.25rem;
   margin-bottom: 2rem;
