--- a/css/styles.css
+++ b/css/styles.css
@@ -11415,16 +11415,16 @@ header.masthead .masthead-heading {
     padding: 0 100px 20px 20px;
   }
 }
-.team-member {
+.stacks-member {
   margin-bottom: 3rem;
   text-align: center;
 }
-.team-member img {
+.stacks-member img {
   width: 14rem;
   height: 14rem;
   border: 0.5rem solid rgba(0, 0, 0, 0.1);
 }
-.team-member h4, .team-member .h4 {
+.stacks-member h4, .stacks-member .h4 {
   margin-top: 1.5rem;
   margin-bottom: 0;
 }
